roles/openshift_kubevirt_redfish/templates/instance/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-redfish
  labels:
    app.kubernetes.io/name: kubevirt-redfish
